Ran through NDepend Quality Checks

--- a/.gitignore
+++ b/.gitignore
@@ -612,3 +612,17 @@ NDependOut/NDependReportFiles/WarningCritical.png
 NDependOut/SourceFiles.zip
 
 NDependOut/TrendMetrics/NDependTrendData2021.xml
+
+NDependOut1/2021_01/11_16_17/InfoWarnings.xml
+
+NDependOut1/2021_01/11_16_17/NDependAnalysisResult_EasyTCP_2021Jan11_16h17.ndar
+
+NDependOut1/2021_01/11_16_17/SourceFiles.zip
+
+NDependOut1/InfoWarnings.xml
+
+NDependOut1/NDependAnalysisResult_EasyTCP_2021Jan11_16h59.ndar
+
+NDependOut1/SourceFiles.zip
+
+NDependOut1/TrendMetrics/NDependTrendData2021.xml
